--- a/views/pages/landing.ejs
+++ b/views/pages/landing.ejs
@@ -38,35 +38,14 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="section_title text-center">
-                    <h2>LATEST EYE GLASSES</h2>
-                    <p>Eye chasmish are very important for thos whos have some difficult in their eye to see every
+                    <h2>LATEST SAFETY GLASSES</h2>
+                    <p>Eyes are very important for thos whos have some difficult in their eye to see every
                         hing clearly and perfectly</p>
                 </div>
             </div>
         </div>
         <div class="row mt--20">
-            <% data.products.forEach(product=> { %>
-                <!-- Start Single Product -->
-                <div class="col-lg-3 col-xl-3 col-sm-6 col-12">
-                    <div class="product">
-                        <div class="thumb" style="
-                            height: 24vh;
-                            background-image: url('<%= data.blogUrl %>/<%= product.img_url%>');
-                            background-size: contain;
-                            background-repeat: no-repeat;
-                            background-position: center;">
-                            <div class="content">
-                                <h4>
-                                    <a class="navi" href="single-product/<%= product.id %>">
-                                        <%= product.name %>
-                                    </a>
-                                </h4>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!-- End Single Product -->
-                <% }) %>
+          
                     <% data.products.forEach(product=> { %>
                         <!-- Start Single Product -->
                         <div class="col-lg-3 col-xl-3 col-sm-6 col-12">
@@ -126,8 +105,8 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="section_title text-center">
-                    <h2>NEW ARRIVLE SUNGLASSES</h2>
-                    <p>Eye chasmish are very important for thos whos have some difficult in their eye to see every
+                    <h2>PRESCRIPTION SAFETY GLASSES</h2>
+                    <p>Eye are very important for thos whos have some difficult in their eye to see every
                         hing clearly and perfectly</p>
                 </div>
             </div>
@@ -269,7 +248,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="section_title text-center">
-                    <h2>ALL FEATURED GLASSES</h2>
+                    <h2>PLANO GLASSES</h2>
                     <p>Eye chasmish are very important for thos whos have some difficult in their eye to see every
                         hing clearly and perfectly</p>
                 </div>
