chore: escape html

--- a/views/pages/single-product.ejs
+++ b/views/pages/single-product.ejs
@@ -116,7 +116,7 @@
             <div class="tab_container">
                 <div class="single_review_content tab-pane fade show active" id="descrip" role="tabpanel">
                     <div class="content">
-                        <%= product.desc%>
+                        <%- product.desc%>
                     </div>
                 </div>
                 <div class="single_review_content tab-pane fade" id="review" role="tabpanel">
