--- a/views/pages/single-product.ejs
+++ b/views/pages/single-product.ejs
@@ -94,7 +94,7 @@
                         <p>Products available in store.
                           
                         </p>
-                        <%= product.short_desc%>
+                        <%- product.short_desc%>
                     </div>
 
                 
