--- a/views/pages/about_us.ejs
+++ b/views/pages/about_us.ejs
@@ -1,10 +1,15 @@
 
-<div class="bradcaump_area bg_image--4">
+<div class="bradcaump_area" style="
+    background-image: url('http://localhost:4000//images/uploads/ozs_bg.jpeg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
                     <div class="bradcaump_inner text-center">
-                        <h2 class="bradcaump-title">About Us</h2>
+                        <h2 class="bradcaump-title">About Us 2</h2>
                         <nav class="bradcaump-content">
                             <a class="breadcrumb_item" href="index.html">Home</a>
                             <span id="nipa" class="brd-separetor">/</span>
@@ -20,7 +25,7 @@
             <div class="row align-items-center">
                 <div class="offset-lg-3 col-xl-7 col-lg-6 col-12">
                     <div class="about_content">
-                        <h2>Why we are the best</h2>
+                        <h2>Why we are the best truly234&nbsp;</h2>
                         <h3>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
                             laudantium,
                             totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae
