--- a/views/pages/landing.ejs
+++ b/views/pages/landing.ejs
@@ -121,7 +121,7 @@
         <div class="thumb" style="
                 height: 40vh;
                 background-image: url('<%= data.blogUrl %>/<%= item.img_url%>');
-                background-size: cover;
+                background-size: contain;
                 background-repeat: no-repeat;
                 background-position: center;">
 
