--- a/views/pages/about_us.ejs
+++ b/views/pages/about_us.ejs
@@ -28,7 +28,7 @@
                         <h2>Why we are the best truly234&nbsp;</h2>
                         <h3>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
                             laudantium,
-                            totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae
+                            totam rem aperiam, eaque ipsa qua2e ab illo inventore veritatis et quasi architecto beatae
                             vitae dicta sunt explicabo</h3>
 
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
