--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -7,8 +7,7 @@
                         <nav class="bradcaump-content">
                             <a class="breadcrumb_item" href="index.html">Home</a>
                             <span id="nipa" class="brd-separetor">/</span>
-                            <span class="breadcrumb_item active">Contact Us</span>
-                        </nav>
+                            <span class="breadcrumb_item active">Contact Us&nbsp;</span></nav>
                     </div>
                 </div>
             </div>
