--- a/views/pages/landing.ejs
+++ b/views/pages/landing.ejs
@@ -467,7 +467,7 @@
 <% bottom_content = data.sections.filter((s,i)=> {return s.name == 'Bottom Banner - Shipping Service'})[0] %>
 <div class="shipping_service bg_image--3 ptb--90">
   <div class="shipping_wrap">
-    <div class="row">
+    <div class=" d-flex flex-column justify-content-center align-items-center">
       <p> We have support available for all our product and services.
       </p>
       <p>You can contact us if you need any further support. </p>
