--- a/views/pages/landing.ejs
+++ b/views/pages/landing.ejs
@@ -1,3 +1,14 @@
+<style>
+
+.bg_image--3 {
+    background-image: url(../img/bg/bg-image-3.webp);
+    background-repeat: repeat;
+    background-size: contain;
+    background-position: center center;
+}
+  
+</style>
+
 <!-- Start Slider Area -->
 <div class="slider_area slide_active">
   <% JSON.parse(data.banners).filter((v,i) => { return v.is_banner == false}).forEach(item=> { %>
@@ -336,7 +347,7 @@
 
 
 <!-- Start Product Area -->
-<div class="product_area section-pt-xl section-pb-xl bg-white">
+<div class="bg_image--3 product_area section-pt-xl section-pb-xl ">
   <div class="container">
     <div class="row">
       <div class="col-lg-12">
