--- a/views/pages/landing.ejs
+++ b/views/pages/landing.ejs
@@ -1,12 +1,10 @@
 <style>
-
-.bg_image--3 {
+  .bg_image--3 {
     background-image: url(../img/bg/bg-image-3.webp);
     background-repeat: repeat;
     background-size: contain;
     background-position: center center;
-}
-  
+  }
 </style>
 
 <!-- Start Slider Area -->
@@ -124,7 +122,33 @@
 
 <!-- Start Banner Area 645 360 -->
 <div class="banner_area">
+
   <div class="row g-1">
+    <div class="col-12">
+
+      <div class="banner" style="
+    width: 100%;
+    height: 80vh;
+">
+        <div class="thumb" style="
+                background-image: url('https://blog.damienslab.com//images/uploads/Screenshot 2024-07-15 173331.jpg');
+                background-size: contain;
+                background-repeat: no-repeat;
+                background-position: center;
+                height: 100%;
+                ">
+        </div>
+      </div>
+
+
+    </div>
+  </div>
+
+
+
+
+
+  <div class="row g-1 d-none">
     <% JSON.parse(data.banners).filter((v,i) => { return v.is_banner == true}).forEach(item=> { %>
 
     <div class="<%= item.class_list %>">
