--- a/views/pages/landing.ejs
+++ b/views/pages/landing.ejs
@@ -15,7 +15,8 @@
   <div class="slide slide_fixed_height d-flex align-items-center poss_relative animation__style01" style="
             background-image: url('<%= data.blogUrl %>/<%= item.img_url%>');
                 background-repeat: no-repeat;
-                background-size: cover;
+                height: 100%;
+                background-size: contain;
                 background-position: center center;
             ">
     <div class="container">
