chore: add nodemailer

--- a/views/pages/single-product.ejs
+++ b/views/pages/single-product.ejs
@@ -1,7 +1,7 @@
 <!-- Start Bradcaump area -->
 <div class="bradcaump_area " style="
     height: 24vh;
-    background-color: #00000030;
+    background-color: ##000000b5;
     background-image: url('<%= data.blogUrl %>/<%= product.img_url%>');
     background-size: contain;
     background-repeat: no-repeat;
