--- a/views/pages/landing.ejs
+++ b/views/pages/landing.ejs
@@ -5,6 +5,18 @@
     background-size: contain;
     background-position: center center;
   }
+
+  .slide::before {
+    position: absolute;
+    background: #000;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    content: "";
+    z-index: -1;
+    opacity: 0;
+}
 </style>
 
 <!-- Start Slider Area -->
