--- a/views/pages/landing.ejs
+++ b/views/pages/landing.ejs
@@ -167,7 +167,7 @@
         <div class="product">
           <a class="navi" href="single-product/<%= product.id %>">
             <div class="thumb" style="
-                            height: 24vh;
+                            height: 300px;
                             background-image: url('<%= data.blogUrl %>/<%= product.img_url%>');
                             background-size: contain;
                             background-repeat: no-repeat;
