--- a/views/pages/landing.ejs
+++ b/views/pages/landing.ejs
@@ -280,7 +280,7 @@
           <div class="product">
             <a class="navi" href="single-product/<%= product.id %>">
               <div class="thumb" style="
-                        height: 24vh;
+                        height: 300px;
                         background-image: url('<%= data.blogUrl %>/<%= product.img_url%>');
                         background-size: contain;
                         background-repeat: no-repeat;
@@ -307,7 +307,7 @@
           <div class="product">
             <a class="navi" href="single-product/<%= product.id %>">
               <div class="thumb" style="
-                        height: 24vh;
+                        height: 300px;
                         background-image: url('<%= data.blogUrl %>/<%= product.img_url%>');
                         background-size: contain;
                         background-repeat: no-repeat;
@@ -461,7 +461,7 @@
         <div class="product">
           <a class="navi" href="single-product/<%= product.id %>">
             <div class="thumb" style="
-                    height: 24vh;
+                    height: 300px;
                     background-image: url('<%= data.blogUrl %>/<%= product.img_url%>');
                     background-size: contain;
                     background-repeat: no-repeat;
